--- a/backend/amplify/.config/project-config.json
+++ b/backend/amplify/.config/project-config.json
@@ -1,12 +1,12 @@
 {
-    "projectName": "frontend",
+    "projectName": "backend",
     "version": "2.0",
     "frontend": "javascript",
     "javascript": {
-        "framework": "react",
+        "framework": "none",
         "config": {
             "SourceDir": "src",
-            "DistributionDir": "build",
+            "DistributionDir": "dist",
             "BuildCommand": "npm.cmd run-script build",
             "StartCommand": "npm.cmd run-script start"
         }
