--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^2.2.0",
+    "aws-amplify-react": "^3.1.1",
+    "aws-appsync": "^3.0.2",
+    "aws-appsync-react": "^3.0.2",
     "react": "^16.10.1",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
