--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "aws-amplify-react": "^3.1.1",
     "aws-appsync": "^3.0.2",
     "aws-appsync-react": "^3.0.2",
+    "graphql-tag": "^2.10.1",
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
