--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-amplify": "^2.2.0",
-    "aws-amplify-react": "^3.1.1",
+    "aws-amplify": "^2.2.2",
+    "aws-amplify-react": "^3.1.3",
     "aws-appsync": "^3.0.2",
     "aws-appsync-react": "^3.0.2",
     "graphql-tag": "^2.10.1",
-    "react": "^16.10.1",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.10.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
