--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "aws-appsync-react": "^3.0.2",
     "graphql-tag": "^2.10.1",
     "leaflet": "^1.6.0",
+    "mapbox-gl": "^1.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
+    "react-mapbox-gl": "^4.8.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
