--- a/backend/amplify/.config/project-config.json
+++ b/backend/amplify/.config/project-config.json
@@ -1,17 +1,17 @@
 {
-    "providers": [
-        "awscloudformation"
-    ],
     "projectName": "backend",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
-        "framework": "none",
+        "framework": "react",
         "config": {
             "SourceDir": "src",
-            "DistributionDir": "dist",
+            "DistributionDir": "build",
             "BuildCommand": "npm.cmd run-script build",
             "StartCommand": "npm.cmd run-script start"
         }
-    }
+    },
+    "providers": [
+        "awscloudformation"
+    ]
 }
