--- a/backend/.graphqlconfig.yml
+++ b/backend/.graphqlconfig.yml
@@ -1,8 +1,8 @@
 projects:
-  backend:
+  panoramicEdinburghApi:
     schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/**/*.js
+      - src/graphql/autogen/**/*.js
     excludes:
       - ./amplify/**
     extensions:
