--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-amplify": "^2.2.2",
-    "aws-amplify-react": "^3.1.3",
-    "aws-appsync": "^3.0.2",
-    "aws-appsync-react": "^3.0.2",
-    "graphql-tag": "^2.10.1",
+    "aws-amplify": "^2.3.0",
+    "aws-amplify-react": "^3.1.9",
+    "aws-appsync": "^3.0.3",
+    "aws-appsync-react": "^3.0.3",
+    "graphql-tag": "^2.10.3",
     "leaflet": "^1.6.0",
-    "mapbox-gl": "^1.7.0",
+    "mapbox-gl": "^1.11.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-leaflet": "^2.6.1",
-    "react-mapbox-gl": "^4.8.2",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-mapbox-gl": "^4.8.6",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "source-map-explorer": "^2.2.2"
+    "@svgr/cli": "^5.4.0",
+    "source-map-explorer": "^2.4.2"
   }
 }
