--- a/backend/amplify/backend/backend-config.json
+++ b/backend/amplify/backend/backend-config.json
@@ -1,34 +1,40 @@
 {
-    "auth": {
-        "backend0ab97a14": {
-            "service": "Cognito",
-            "providerPlugin": "awscloudformation",
-            "dependsOn": []
-        }
-    },
-    "api": {
-        "panoramicEdinburghApi": {
-            "service": "AppSync",
-            "providerPlugin": "awscloudformation",
-            "output": {
-                "authConfig": {
-                    "additionalAuthenticationProviders": [
-                        {
-                            "authenticationType": "API_KEY",
-                            "apiKeyConfig": {
-                                "description": "public",
-                                "apiKeyExpirationDays": "365"
-                            }
-                        }
-                    ],
-                    "defaultAuthentication": {
-                        "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-                        "userPoolConfig": {
-                            "userPoolId": "authbackend0ab97a14"
-                        }
-                    }
-                }
-            }
-        }
-    }
+	"auth": {
+		"backend0ab97a14": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	},
+	"api": {
+		"panoramicEdinburghApi": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"authConfig": {
+					"additionalAuthenticationProviders": [
+						{
+							"authenticationType": "API_KEY",
+							"apiKeyConfig": {
+								"description": "public",
+								"apiKeyExpirationDays": "365"
+							}
+						}
+					],
+					"defaultAuthentication": {
+						"authenticationType": "AMAZON_COGNITO_USER_POOLS",
+						"userPoolConfig": {
+							"userPoolId": "authbackend0ab97a14"
+						}
+					}
+				}
+			}
+		}
+	},
+	"storage": {
+		"resources": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
+	}
 }
